--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div id=header-wrapper>
     <div id="top"></div>
     <div class="titlehead">
-      <img src="assets/imgs/logoSite+.png" id="logo" alt="Titre" />
+      <a href="#"><img src="assets/imgs/logoSite+.png" id="logo" alt="Titre"/></a>
     </div>
   </div>
   <!-- Fin du parallax -->
 
   <!-- Barre de Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navbarColor">
+  <nav class="navbar navbar-expand-lg sticky-top" id="navbarColor">
 
     <!-- ici pour logo -->
     <a class="navbar-brand" href="#"><img src="assets/imgs/logoSite.png" id="logoNav" alt="LogoDuSite"></a>
@@ -42,12 +42,12 @@
   <!-- Fin de la Barre -->
 
   <!-- Onglet de navigation -->
-  <div class="nav navbar-expand-lg nav-pills sticky-top" id="pills-tab" role="tablist">
-    <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Acceuil</a>
-    <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
-    <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
-    <a class="nav-item nav-link" id="pills-bag-tab" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false" data-toggle="modal" data-target="#clickbtn"><img src="assets/imgs/Panier 200X191.png" id="imgBag" alt="Panier"></a>
-  </div>
+    <div class="nav nav-pills sticky-top" id="pills-tab" role="tablist">
+      <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Accueil</a>
+      <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
+      <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
+      <a class="nav-item nav-link" id="pills-bag-tab" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false" data-toggle="modal" data-target="#clickbtn"><img src="assets/imgs/Panier 200X191.png" id="imgBag" alt="Panier"></a>
+    </div>
   <!-- Fin de l'onglet de navigation -->
 
   <!-- Contenue de l'onglet de navigation -->
@@ -95,7 +95,7 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-        <!-- FIN CAROUSEL D'ACCEUIL -->
+        <!-- FIN CAROUSEL D'ACCUEIL -->
 
         <!-- DÉBUT DE DESCRIPTION DU SITE -->
         <h5 class="qsn">QUI SOMMES-NOUS ?</h5>
