--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
               </select>
               <label for="subject">Votre message :</label>
               <textarea id="subject" name="subject" placeholder="Écrivez..." style="height:200px"></textarea>
-              <input type="submit" value="Submit">
+              <input id="submit" type="submit" value="Envoyer">
             </form>
           </div>
         </div>
