--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a class="nav-item nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Accueil</a>
     <a class="nav-item nav-link" id="pills-products-tab" data-toggle="pill" href="#pills-products" role="tab" aria-controls="pills-products" aria-selected="false">Produits</a>
     <a class="nav-item nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
-    <a class="nav-item nav-link" id="pills-bag-tab" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false" data-toggle="modal" data-target="#clickbtn"><img src="assets/imgs/Panier 200X191.png" id="imgBag" alt="Panier"></a>
+    <a class="nav-item nav-link" id="pills-bag-tab" href="#pills-bag" role="tab" aria-controls="pills-bag" aria-selected="false" data-toggle="modal" data-target="#clickbtn"><span id="itemCount"></span><img src="assets/imgs/Panier 200X191.png" id="imgBag" alt="Panier"></a>
   </div>
   <!-- Fin de l'onglet de navigation -->
 
